<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">multimatum</string>
    <string name="qr_code_scanner_button_text">Scanner</string>
    <string name="calendar_deadline_input_text">Enter new deadline…</string>
    <string name="calender_add_new_deadline_button_text">Add</string>
    <string name="calendar_button_text">Calendar</string>
    <string name="main_activity_go_to_groups_error_dialog_title">Error</string>
    <string name="main_activity_go_to_groups_error_dialog_message">Cannot use groups when signed-in anonymously\nPlease sign-in with a Google account</string>
    <string name="main_activity_go_to_groups_error_dialog_go_to_sign_in_page">Go to sign-in page</string>
    <string name="main_activity_go_to_groups_error_dialog_cancel">Cancel</string>
    <string name="main_settings_activity_title">Settings</string>
    <string name="main_settings_account_section_title">Account</string>
    <string name="main_settings_account_button">My account</string>
    <string name="main_settings_ui_section_title">Appearance</string>
    <string name="main_settings_dark_mode_button">Dark mode</string>
    <string name="main_settings_notifications_section_title">Notifications</string>
    <string name="main_settings_enable_notif_button">Enable notifications</string>
    <string name="main_settings_procrastination_fighter_section_title">Procrastination fighter</string>
    <string name="main_settings_enable_procrastination_fighter_button">Notify me when I am procrastinating</string>
    <string name="main_settings_procrastination_fighter_sensitivity">Sensitivity</string>
    <string name="main_open_settings_but_content_descr">Settings button</string>
    <string name="isAlreadyDue">Is already Due</string>
    <string name="done">Done</string>
    <string name="DueTheXatX">Due the %1s at %1s</string>
    <string name="DueInXDays">Due in %1s Days</string>
    <string name="DueInXHours">Due in %1s Hours</string>
    <string name="missing_sensor_msg">"%1s (disabled: missing sensor on device)"</string>
    <string name="stop_procrastinating_msg">"Hey! Why is this phone moving? You should be working!"</string>
    <string name="notify_me">Notify me :</string>
    <string name="notify_before">%1s before</string>
    <string name="link_pdf_to_deadline_title">Link pdf:</string>
    <string name="pick_pdf">Select a PDF</string>
    <string name="you_re_logged_in_as">You\'re logged in as %1s</string>
    <string name="logout">LOGOUT</string>
    <string name="procrastination_fighter_enable_msg">Procrastination fighter is enabled</string>
    <string name="procrastination_fighter_disabled_msg">Procrastination fighter is disabled</string>
    <string name="procrastination_fighter_permanent_notif_title">Procrastination detector</string>
    <string name="procrastination_fighter_permanent_notif_content_text">Procrastination is bad…</string>
    <string name="deleted">Deleted</string>
    <string name="undo">Undo</string>
    <string name="write_title_here">Write Title here</string>
    <string name="add_deadline_button_cont_descr">Add Deadline Button</string>
    <string name="enter_a_title">Enter a title</string>
    <string name="deadline_created">Deadline created.</string>
    <string name="login_google_text">Sign in with Google</string>
    <string name="generate_qrcode">Generate QRCode</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="notification_shared_preference">com.github.multimatum_team.multimatum.notifications</string>
    <string name="not_done">Not Done</string>
    <string name="groups">Groups</string>
    <string name="mapbox_access_token" tools:ignore="Typos">pk.eyJ1IjoibXVsdGltYXR1bSIsImEiOiJjbDMwNHdvaHYwZ21nM2JtdW42MWY0cTRyIn0.T61NTFU2NdeqmCu1CdO9mg</string>
    <string name="display_location_default_msg">No location</string>
    <string name="location_default_msg">No location selected</string>
    <string name="select_notifications">Select Notifications</string>
    <string name="write_description_here">Write description here</string>
    <string name="no_alarm_planned">No Alarm Planned</string>
    <string name="alarm_X_before">Alarm %s before</string>
    <string name="not_in_any_group">Not in any group</string>
    <string name="in_the_group_X">In the group: %s</string>
    <string name="select_group">Select Group</string>
    <string name="selected_item">Selected item:</string>
    <string name="group_owner">Owner: %s</string>
    <string name="group_invite">Invite</string>
    <string name="group_details_group_name_hint">Group name</string>
    <string name="group_delete">Delete</string>
    <string name="group_member_confirm_removal">Remove</string>
    <string name="group_member_cancel_removal">Cancel</string>
    <string name="group_member_removal_confirmation_dialog">Are you sure you want to remove %s from the group?\nThis action is irreversible</string>
    <string name="group_member_attempt_removal_of_owner_error_dialog">You are the owner of this group, you cannot remove yourself!</string>
    <string name="group_leave">Leave</string>
    <string name="group_leave_confirmation_dialog">Are you sure you want to leave the group?</string>
    <string name="group_leave_confirm">Leave</string>
    <string name="group_leave_cancel">Cancel</string>
    <string name="group_delete_dialog_confirm">Delete</string>
    <string name="group_delete_dialog_cancel">Cancel</string>
    <string name="group_delete_confirmation_dialog">Are you sure you want to delete this group?</string>
    <string name="parsing_validation_title">Your title can be parse to :</string>
    <string name="download_pdf">Download linked pdf</string>
    <string name="addgroup">AddGroup</string>
    <string name="group_invite_deny">Deny</string>
    <string name="group_invite_accept">Accept</string>
    <string name="group_invite_message_you_have_been_invited_to_join">You have been invited to join the group</string>
    <string name="group_invite_message_must_be_signed_in">You have been invited to join the group</string>
    <string name="group_invite_message_already_member_of_this_group">You are already a member of this group</string>
    <string name="group_invite_message_invalid">Invite link is invalid, ask for a new one</string>
    <string name="group_invite_link_title">Join group %s</string>
    <string name="group_invite_link_description">Click this link to accept the invite</string>
    <string name="group_invite_link_copied_to_clipboard">Copied invite link to clipboard</string>
    <string name="group_invite_link_to">Invite link to %s</string>
    <string name="multiple_alarms_planned">Multiple Alarms Planned</string>
    <string name="no_associated_location">No associated location</string>
    <string name="pdf_upload_offline_alert">No Internet connexion, the pdf will not be added</string>
    <string name="pdf_download_offline_alert">Download failed: No Internet Connexion</string>
</resources>