<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainSettingsActivity">

    <TextView
        android:id="@+id/main_settings_activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_settings_activity_title"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="650dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_settings_activity_title"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/main_settings_accounts_section_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_settings_account_section_title"
            android:textSize="24" />

        <LinearLayout
            android:id="@+id/main_settings_main_vertical_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <Button
            android:id="@+id/main_settings_account_button"
            android:layout_width="175dp"
            android:layout_height="42dp"
            android:backgroundTint="@color/white"
            android:text="@string/main_settings_account_button"
            android:textColor="@color/black"
            app:icon="@android:drawable/ic_menu_myplaces"
            app:iconTint="@color/black" />

        <TextView
            android:id="@+id/main_settings_ui_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>