<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddDeadlineActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="411dp"
        android:layout_height="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496">

        <EditText
            android:id="@+id/add_deadline_select_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/write_title_here"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="@color/gray_variation_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintPickers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_deadline_select_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                <TextView
                    android:id="@+id/add_deadline_text_time"
                    android:layout_width="158dp"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColorHint="@color/gray_variation_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:hint="Selected Time" />

                <Button
                    android:id="@+id/add_deadline_select_time"
                    android:layout_width="135dp"
                    android:layout_height="49dp"
                    android:background="@drawable/circle_button"
                    android:onClick="selectTime"
                    android:text="@string/select_time"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/add_deadline_text_time"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/add_deadline_text_date"
                    android:layout_width="158dp"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColorHint="@color/gray_variation_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:hint="Selected Date" />

                <Button
                    android:id="@+id/add_deadline_select_date"
                    android:layout_width="135dp"
                    android:layout_height="49dp"
                    android:background="@drawable/circle_button"
                    android:onClick="selectDate"
                    android:text="@string/select_date"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/add_deadline_text_date"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutNotification"
            android:layout_width="297dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintPickers">

            <TextView
                android:id="@+id/add_notification_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_notification_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.069"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.016" />

            <CheckBox
                android:id="@+id/radio_notification_1h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.064"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.198" />

            <CheckBox
                android:id="@+id/radio_notification_3d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.621"
                app:layout_constraintStart_toEndOf="@id/radio_notification_1d"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.656" />

            <CheckBox
                android:id="@+id/radio_notification_1d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.064"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.656" />

            <CheckBox
                android:id="@+id/radio_notification_5h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.621"
                app:layout_constraintStart_toEndOf="@id/radio_notification_1h"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.186" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintPDFSelection"
            android:layout_width="297dp"
            android:layout_height="52dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayoutNotification">

            <TextView
                android:id="@+id/selectedPdf"
                android:layout_width="259dp"
                android:layout_height="22dp"
                android:layout_marginTop="4dp"
                android:onClick="selectPDF"
                android:text="@string/pick_pdf"
                android:textColor="#0798DA"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pdfTitle" />

            <TextView
                android:id="@+id/pdfTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/link_pdf_to_deadline_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.066"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/add_deadline_button"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="100dp"
            android:layout_height="49dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/circle_button"
            android:onClick="addDeadline"
            android:text="@string/calender_add_new_deadline_button_text"
            app:icon="@drawable/ic_add_deadline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintPDFSelection"
            app:layout_constraintVertical_bias="0.602" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>